# diogenes

./: .gitignore  PROJEKTINFO.md  README.md  catalog-info.yaml  dpo_audit_report.json  mkdocs.yml  pyproject.toml  roadmap.md
.qwen/: settings.json
.qwen/skills/auto-skill-remove-emojis/: SKILL.md
configs/: config.yaml  remote_config.yaml  testing.yaml
datasets/: dpo_statistics.json  sft_statistics.json  sua_statistics.json
docs/: 7_Modi.md  ATTNRES_IMPLEMENTATION_PLAN.md  ATTNRES_QUICKSTART.md  IMPLEMENTATION_SUMMARY.md  PASS1_GUARDRAILS.md  TRAINING_STRATEGY_V2.md  api.md  architecture.md  deployment.md  index.md  phase0_quickstart.md  phase3_dpo_ready.md
docs/sci_papers/: README.md  arxiv_2602_21189_pass1_degradation.md  arxiv_2602_22617_semantic_tube_jePA.md
experiments/cascade_eval/: README.md  agents.py  claims.yaml  metrics.py  run_experiment.py  topologies.py
experiments/cascade_eval/results/: cascade_eval.csv
phasen/: phase_0.md  phase_1.md  phase_2.5.md  phase_2.md  phase_3.5.md  phase_3.md  phase_4.md  phase_5.md  phase_6.md  phase_7.md
scripts/: download_gguf.py  download_model.py  pass1_protection_check.py  prepare_remote_machine.py  run_dpo_training.sh  run_sua_training.sh  setup_env.py  test_inference.py
src/diogenes/: __init__.py  config.py  dataset_generator.py  dpo_audit.py  eval_metrics.py  inference.py  model.py  pass1_protection.py  train_dpo.py  train_sft.py  train_sua.py
src/diogenes/attnres/: __init__.py  block.py  cache.py  config.py  core.py  full.py  utils.py
src/diogenes/testing/: __init__.py  cli.py
src/diogenes/testing/commands/: __init__.py  batch.py  compare.py  quick.py  report.py
src/diogenes/testing/core/: __init__.py  runner.py  storage.py
src/diogenes/testing/reports/: __init__.py
src/diogenes/testing/suites/: __init__.py  calibration.json  epistemic_modes.json  hallucination.json
src/diogenes/testing/ui/: __init__.py  gradio_app.py
tests/: test_attnres.py  test_basic.py  test_cascade_eval.py  test_dataset_generator.py  test_inference.py  test_model.py  test_pass1_protection.py  test_train_dpo.py  test_train_sft.py
