[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diogenes"
version = "0.1.0"
description = "The Reliable 32B - Epistemically optimized language model based on Qwen3-32B"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Diogenes Team"}
]
keywords = ["llm", "qwen", "epistemic-reliability", "nlp", "pytorch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.1.0",
    "transformers>=4.37.0",
    "accelerate>=0.25.0",
    "peft>=0.8.0",
    "bitsandbytes>=0.42.0",
    "datasets>=2.14.0",
    "sentencepiece>=0.1.99",
    "protobuf>=4.25.0",
    "scipy>=1.11.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0",
    "wandb>=0.16.0",
    "evaluate>=0.4.1",
    "rouge-score>=0.1.2",
    "sacrebleu>=2.3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]
unsloth = [
    "unsloth[cu121]>=2024.1",
]
axolotl = [
    "axolotl>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/diogenes/diogenes"
Repository = "https://github.com/diogenes/diogenes"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
